# claude-devcontainer

./: .dockerignore  .gitignore  BUILD.bazel  CLAUDE.md  Dockerfile  MODULE.bazel  README.md  defs.bzl  go.mod  go.sum  main.go  start-devcontainer.sh
claude-instructions/: take-screenshot.md
skills/take-screenshot/: SKILL.md
